# conductor-arch

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  claude_codex_integration.md  deny.toml  flake.nix  list_o_problems.md  nfpm.yaml  progress.md
.claude/: ralph-loop.local.md
.codex/: AGENTS.md
.context/proofs/: dedupe-matrix-20260620194545.txt  deployment-rollup-20260620163141.txt  deployment-rollup-20260620163223.txt  deployment-rollup-20260620163515.txt  full-matrix-20260620194351.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  issue19-skipped-proof.yml  publish.yml  security.yml  test.yml
.superpowers/sdd/: final-empty-collections-report.md  task-1-report.md  task-3-report.md  task-5-report.md
claude/: CLAUDE.md
crates/archcar/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_sessions.rs  dev_instance_env.rs  makefile_dev.rs  publish_workflow.rs
crates/core/: Cargo.toml
crates/gtk-app/: Cargo.toml
docs/: app-state-refresh-map.md  archductor-docs-parity-map.md  background-chat-update-map.md  conductor-docs-parity-map.md  conductor-gui-mvp-handoff.md  deploy-and-local-test.md  manual-testing-checklist.md  mvp-scope.md  perceo-suite-release-prd.md  release-readiness.md
docs/ui-sketches/: archductor-ui-sketches.md  linux-conductor-ui-sketches.md
packaging/: README.md  archductor-gtk.desktop
packaging/aur/: PKGBUILD
scripts/: dev-instance-env.sh  release-readiness.sh  update-aur-checksum.sh  update-homebrew-formula.sh
tests/: release-readiness-test.sh
(+114 files in other folders)
